ajjste de padding contenedor logo en version movil

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div id="inner">
         <!-- Elemento 1: Logo -->
         <div class="block" id="logo-block" aria-label="Logo">
-          <img src="images/logo.jpg" alt="Logo AuLabs" />
+          <img src="images/logo.jpg" alt="Logo Auguslabs" />
         </div>
 
         <!-- Elemento 2: SVG con engranajes y barra de avance -->
