adcion de footer a la pagina

--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
           <span id="country" class="country" role="text"></span>
         </div>
       </div>
+      
+      <!-- Footer -->
+      <footer class="footer">
+        <p>auguslabs creative house 2025</p>
+      </footer>
     </div>
 
     <script src="script.js"></script>
